# stock-selector

./: .dockerignore  .env.dev.bak  .env.example  .env.prod  .gitignore  CLAUDE.md  DEPLOYMENT_MACOS.md  Dockerfile  PLAN_adj_factor_and_commission.md  PROJECT_TASKS.md  README.md  alembic.ini  backfill_picks.py  docker-compose.yml  pyproject.toml  test_news_crawl.py  update_log.md
alembic/: env.py
app/: __init__.py  config.py  database.py  exceptions.py  logger.py  main.py
docker/: .env.docker  nginx.conf  supervisord.conf
docs/: CODEX_API_ISSUE.md  CODEX_COMPLETION_SUMMARY.md  CODEX_INTEGRATION.md  CODEX_INTEGRATION_SUMMARY.md  CODEX_QUICKSTART.md  V4_StarMap_实施总结.md  V4_USAGE_GUIDE.md  p5-etl-implementation-plan.md  test_report_starmap_2026-03-06.md  数据库表清单.md  用户指南.md
scripts/: PERFORMANCE_VERIFICATION.md  backfill_etl.py  backfill_rolling_high.py  check_20250317.py  check_missing_dates.py  compute_indicators_parallel.py  create_financial_tables.py  full_sync.sh  init_data.py  monitor_progress.py  p1_verification_results.json  p1_verify_backtest.py  package.py  quick_verify_batch_sync.py  resync_20250317.py  service.sh  starmap_replay.py  start_prod.sh  sync_monitor.sh  sync_report.py  test_data_integrity.py  test_graceful_shutdown.py  test_peak_pullback.py  test_raw_sync.py  truncate_all.py  verify_adj_factor.py  verify_backtest.py  verify_backtest_adj.py  verify_backtest_batch.py  verify_backtest_manual.py  verify_batch_sync_performance.py  verify_core_functionality.py  verify_engines_1year.py  verify_scheduler.md
tests/: test_ai_manager_codex.py  (+3 more)
(+821 files in other folders)
