[project]
name = "stock-selector"
version = "0.1.0"
description = "A股智能选股与回测平台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.6.0",
    "baostock>=0.8.8",
    "akshare>=1.14.0",
    "alembic>=1.14.0",
    "click>=8.1.0",
    "pandas>=2.2.0",
    "backtrader>=1.9.78",
    "apscheduler>=3.10.0",
    "google-genai>=1.0.0",
    "redis[hiredis]>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
